* libltdl/configure.in: the sed expression for finding the shared library extension used to think the . in [.] for the cygwin shared_library_names_spec was the start of the extension!!  We now remove anything in square brackets (assuming that the square brackets delimit a sed or expr expression which is not part of the extension) before looking for the extension.
* TODO (cygwin):  food for thought re: mutually dependant dlls.

--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -42,7 +42,7 @@ AC_CACHE_CHECK([which extension is used for shared libraries],
   done
   rm -f conftest
 changequote(, )
-  echo "$last" | sed 's/^[^.]*//;s/\$.*$//;s/\.$//' > conftest
+  echo "$last" | sed 's/\[.*\]//;s/^[^.]*//;s/\$.*$//;s/\.$//' > conftest
 changequote([, ])
 )
 libltdl_cv_shlibext=`cat conftest`
