--- a/ltmain.in
+++ b/ltmain.in
@@ -883,6 +883,7 @@ compiler."
 	    elif test "$prev" = dlfiles && test "$dlopen_self" != yes; then
 	      dlself=yes
 	    else
+	      dlself=needless
 	      export_dynamic=yes
 	    fi
 	    prev=
@@ -922,12 +923,8 @@ compiler."
 	  case "$arg" in
 	  /* | [A-Za-z]:[/\\]*) ;;
 	  *)
-	    absdir=`cd "$arg" && pwd`
-	    if test -z "$absdir"; then
-	      $echo "$modename: cannot determine absolute directory name of \`$dir'" 1>&2
-	      exit 1
-	    fi
-	    arg="$absdir"
+	    $echo "$modename: only absolute run-paths are allowed" 1>&2
+	    exit 1
 	    ;;
 	  esac
 	  if test "$prev" = rpath; then
@@ -1085,12 +1082,8 @@ compiler."
 	case "$dir" in
 	/* | [A-Za-z]:[/\\]*) ;;
 	*)
-	  absdir=`cd "$dir" && pwd`
-	  if test -z "$absdir"; then
-	    $echo "$modename: cannot determine absolute directory name of \`$dir'" 1>&2
-	    exit 1
-	  fi
-	  dir="$absdir"
+	  $echo "$modename: only absolute run-paths are allowed" 1>&2
+	  exit 1
 	  ;;
 	esac
 	case "$xrpath " in
@@ -1283,7 +1276,7 @@ compiler."
 	  *)
 	    absdir=`cd "$dir" && pwd`
 	    if test -z "$absdir"; then
-	      $echo "$modename: cannot determine absolute directory name of \`$libdir'" 1>&2
+	      $echo "$modename: cannot determine absolute directory name of \`$dir'" 1>&2
 	      exit 1
 	    fi
 	    ;;
@@ -1496,7 +1489,7 @@ compiler."
 	$echo "$modename: warning: \`-l' and \`-L' are ignored for archives" 1>&2
       fi
 
-      if test -n "$dlfiles$dlprefiles"; then
+      if test -n "$dlfiles$dlprefiles" || test "$dlself" != no; then
 	$echo "$modename: warning: \`-dlopen' is ignored for archives" 1>&2
       fi
 
@@ -1566,7 +1559,7 @@ compiler."
 	 exit 1
       fi
 
-      if test -n "$dlfiles$dlprefiles"; then
+      if test -n "$dlfiles$dlprefiles" || test "$dlself" != no; then
 	$echo "$modename: warning: \`-dlopen' is ignored for libtool libraries" 1>&2
       fi
 
@@ -2118,7 +2111,7 @@ EOF
 	$echo "$modename: warning: \`-l' and \`-L' are ignored for objects" 1>&2
       fi
 
-      if test -n "$dlfiles$dlprefiles"; then
+      if test -n "$dlfiles$dlprefiles" || test "$dlself" != no; then
 	$echo "$modename: warning: \`-dlopen' is ignored for objects" 1>&2
       fi
 
