* ltmain.in ($PATH): instead of modifying the PATH, better prevent its expansion the first time *_cmds variables are eval'ed.  Modify $show within loops that eval them so as to expand variables * ltconfig.in (*_cmds): quote $ so that they're not expanded by the first eval

--- a/ltmain.in
+++ b/ltmain.in
@@ -90,13 +90,6 @@ if test "$build_libtool_libs" != yes && test "$build_old_libs" != yes; then
   exit 1
 fi
 
-# A little paranoid perhaps...
-[ "${HOME+set}" ] || HOME=`cd && pwd`
-
-# Apparently some people optimistically hardcode `~' in their path, and
-# hope that their tools will interpret it correctly.  We mustn't disappoint!
-eval PATH=`echo "$PATH" | sed 's,^~/,$HOME/,;s,:~/,:$HOME/,g'`
-
 # Global variables.
 mode=$default_mode
 nonopt=
@@ -2068,7 +2061,7 @@ EOF
 	    IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
 	    for cmd in $cmds; do
 	      IFS="$save_ifs"
-	      $show "$cmd"
+	      eval $show \""$cmd"\"
 	      $run eval "$cmd" || exit $?
 	    done
 	    IFS="$save_ifs"
@@ -2094,7 +2087,7 @@ EOF
 	IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
 	for cmd in $cmds; do
 	  IFS="$save_ifs"
-	  $show "$cmd"
+	  eval $show \""$cmd"\"
 	  $run eval "$cmd" || exit $?
 	done
 	IFS="$save_ifs"
@@ -2171,7 +2164,7 @@ EOF
       IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
       for cmd in $cmds; do
 	IFS="$save_ifs"
-	$show "$cmd"
+	eval $show \""$cmd"\"
 	$run eval "$cmd" || exit $?
       done
       IFS="$save_ifs"
@@ -2195,7 +2188,7 @@ EOF
 	IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
 	for cmd in $cmds; do
 	  IFS="$save_ifs"
-	  $show "$cmd"
+	  eval $show \""$cmd"\"
 	  $run eval "$cmd" || exit $?
 	done
 	IFS="$save_ifs"
@@ -2868,7 +2861,7 @@ fi\
       IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
       for cmd in $cmds; do
 	IFS="$save_ifs"
-	$show "$cmd"
+	eval $show \""$cmd"\"
 	$run eval "$cmd" || exit $?
       done
       IFS="$save_ifs"
@@ -3170,7 +3163,7 @@ libdir='$install_libdir'\
 	  IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
 	  for cmd in $cmds; do
 	    IFS="$save_ifs"
-	    $show "$cmd"
+	    eval $show \""$cmd"\"
 	    $run eval "$cmd" || exit $?
 	  done
 	  IFS="$save_ifs"
@@ -3324,7 +3317,7 @@ libdir='$install_libdir'\
       IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
       for cmd in $cmds; do
 	IFS="$save_ifs"
-	$show "$cmd"
+	eval $show \""$cmd"\"
 	$run eval "$cmd" || exit $?
       done
       IFS="$save_ifs"
@@ -3363,7 +3356,7 @@ libdir='$install_libdir'\
 	  IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
 	  for cmd in $cmds; do
 	    IFS="$save_ifs"
-	    $show "$cmd"
+	    eval $show \""$cmd"\"
 	    $run eval "$cmd" || admincmds="$admincmds
        $cmd"
 	  done
@@ -3606,7 +3599,7 @@ libdir='$install_libdir'\
 	    IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
 	    for cmd in $cmds; do
 	      IFS="$save_ifs"
-	      $show "$cmd"
+	      eval $show \""$cmd"\"
 	      $run eval "$cmd"
 	    done
 	    IFS="$save_ifs"
@@ -3618,7 +3611,7 @@ libdir='$install_libdir'\
 	    IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
 	    for cmd in $cmds; do
 	      IFS="$save_ifs"
-	      $show "$cmd"
+	      eval $show \""$cmd"\"
 	      $run eval "$cmd"
 	    done
 	    IFS="$save_ifs"
