--- a/libtoolize.in
+++ b/libtoolize.in
@@ -2,7 +2,7 @@
 # libtoolize - Prepare a package to use libtool.
 # @configure_input@
 # Copyright (C) 1996-1999 Free Software Foundation, Inc.
-# Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
+# Originally by Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
