--- a/demo/configure.in
+++ b/demo/configure.in
@@ -23,6 +23,7 @@ grep '^global_symbol_pipe=..*$' ./libtool >/dev/null])
 AC_CHECK_HEADERS(string.h math.h)
 
 AC_CHECK_LIBM
+AC_SUBST(LIBM)
 
 dnl Output the makefile
 AC_OUTPUT(Makefile)
