--- a/depdemo/l1/Makefile.am
+++ b/depdemo/l1/Makefile.am
@@ -1,5 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
+AUTOMAKE_OPTIONS = no-dependencies foreign
+
 INCLUDES = -I$(top_srcdir)
 
 lib_LTLIBRARIES = libl1.la
