--- a/ltmain.in
+++ b/ltmain.in
@@ -997,8 +997,8 @@ compiler."
 	dir=`$echo "X$arg" | $Xsed -e 's/^-L//'`
 	if test -d "$dir"; then :
 	else
-	  $echo "$modename: directory \`$dir' does not exist" 1>&2
-	  exit 1
+	  $echo "$modename: directory \`$dir' does not exist, dropping it" 1>&2
+	  continue
 	fi
 	# We need an absolute path.
 	case "$dir" in
